--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
       </p>
       <div class="row align-items-center">
         <div class="col-lg-6 mb-4 mb-lg-0">
-          <img src="/api/placeholder/600/400" alt="Brain MRI Scan Analysis" class="img-fluid" />
+          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTWNE6iUb65F-gq2C18rhl66aTnaJ2oMHxLpA&s" alt="Brain MRI Scan Analysis" class="img-fluid" />
         </div>
         <div class="col-lg-6 text-start">
           <h3 class="mb-4">How It Works</h3>
